--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,7 @@ jobs:
         run: pnpm install
 
       - name: Publish to NPM
-        run: pnpm -r publish --access public --no-git-checks
+        # run: pnpm -r publish --access public --no-git-checks
+        run: pnpm --filter vite-plugin-compression-rs publish --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
